# inkirinet-hotspot

./: .gitignore  MANIFEST.in  README.rst  manage.py  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
inkirinet/: routeros.py  sheets.py  test_sheets.py
inkirinethotspot/: asgi.py  settings.py  tests.py  urls.py  wsgi.py
inkirinethotspot/apps/contracts/: admin.py  auth.py  forms.py  models.py  urls.py  views.py
inkirinethotspot/apps/contracts/locale/pt_BR/LC_MESSAGES/: django.po
inkirinethotspot/apps/contracts/management/commands/: inkirinetleasesync.py  inkirinetsheetspoll.py
inkirinethotspot/apps/contracts/migrations/: 0001_initial.py
inkirinethotspot/apps/contracts/templates/contracts/: base.html  home.html  login.html
inkirinethotspot/apps/contracts/tests/: test_auth.py  test_commands.py  test_forms.py  test_models.py  test_views.py
