[metadata]
name = inkirinet-hotspot
version = 0.1
description = "Inkirinet's WiFi hostspot portal"
long_description = file: README.rst
url = https://github/jvdm/inkirinet-hotspot
author = João Victor Martins
author_email = jvdm@sdf.org
license = MPL 2.0
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
license_files = LICENSE.txt

[options]
include_package_data = true
packages = find:
install_requires =
    django
    google-api-python-client
